Move some flags in scripts.
Signed-off-by: Eduard Ganiukov <eduard.ganiukov@swisscom.com>